--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,3 +7,11 @@
       </ul>
     </nav>
 </header>
+<footer>
+  <p>
+      <span class="footTwentyPix">
+          JacKr Enterprises
+        </span>
+      &copy; 2021
+</p>
+</footer>
