--- a/src/main/resources/templates/contactUs.html
+++ b/src/main/resources/templates/contactUs.html
@@ -15,9 +15,25 @@
         hibernation, and working reduced hours. Hence a reply to your enquiry
         and correspondence may be delayed.</p1
       >
-    </div>
-    <div class="container">
-      <form action=" /action_page"></form>
-    </div>
+    <form>
+      <div class="input-row">
+        <div class="input-group">
+          <label>Name</label>
+          <input type="text" placeholder="John Smith">
+        </div>
+        <div class="input-group">
+          <label>Phone Number</label>
+          <input type="text" placeholder="+1 800-123-4567">
+        </div>
+        <div class="input-group">
+          <label>Email</label>
+          <input type="email" placeholder="jackr@enterprise.com">
+        </div>
+        <div class="input-column">
+           <label>Send Message</label>
+          <textarea rows="10" placeholder="Your inquiry"></textarea>
+        </div>
+      </div>
+    </form>
   </body>
 </html>
