html on contactUs complete

--- a/src/main/resources/templates/contactUs.html
+++ b/src/main/resources/templates/contactUs.html
@@ -34,6 +34,7 @@
           <textarea rows="10" placeholder="Your inquiry"></textarea>
         </div>
       </div>
+      <button type="submit">SUBMIT</button>
     </form>
   </body>
 </html>
