styled contact and about us pages

--- a/src/main/resources/templates/css work template.html
+++ b/src/main/resources/templates/css work template.html
@@ -4,7 +4,7 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styleheaderfooter.css" />
   <head>
     <title>JacKr Enterprises</title>
   </head>
