Landing Page Finished

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
-        <span class="twentyPix"><h1>JacKr Enterprises<h1></span>
+        <span class="twentyPix"><h1>JacKr Enterprises</h1></span>
       <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Treks</a></li>
+          <li><a href="/layouts/contactUs.html">Contact Us</a></li>
+          <li><a href="aboutUs.html">About Us</a></li>
       </ul>
     </nav>
 </header>
