--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -1,77 +1,79 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>About US</title>
-</head>
-<body>
-<div class="about-section">
-  <h1>About Our Team</h1>
-  <p1
-  >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-    mollit anim id est laborum.</p1
-  >
-</div>
-<div class="column">
-  <div class="card">
-    <div class="container">
-      <h2>Filsan Madar</h2>
-      <p class="title">Sherpa</p>
-      <p1> Add text that describes person</p1>
-      <p>filsan@enterprise.com</p>
-      <button type="Contact">Contact</button>
+  <head>
+    <link rel="stylesheet" href="fullstyle.css" />
+    <meta charset="UTF-8" />
+    <title>About US</title>
+  </head>
+  <body>
+    <div class="about-section">
+      <h1>About Our Team</h1>
+      <p1
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.</p1
+      >
     </div>
-  </div>
-</div>
-<div class="column">
-  <div class="card">
-    <div class="container">
-      <h2>Lee Powel</h2>
-      <p class="title">Sherpa</p>
-      <p1> Add text that describes person</p1>
-      <p>lee@enterprise.com</p>
-      <button type="Contact">Contact</button>
+    <div class="employees">
+      <div class="column">
+        <div class="card">
+          <div class="container">
+            <h2>Filsan Madar</h2>
+            <p class="title">Sherpa</p>
+            <p1> Add text that describes person</p1>
+            <p class="email">filsan@enterprise.com</p>
+            <button type="Contact">Contact</button>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <div class="container">
+            <h2>Lee Powell</h2>
+            <p class="title">Sherpa</p>
+            <p1> Add text that describes person</p1>
+            <p class="email">lee@enterprise.com</p>
+            <button type="Contact">Contact</button>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <div class="container">
+            <h2>Rose Holmes-Minton</h2>
+            <p class="title">Sherpa</p>
+            <p1> Add text that describes person</p1>
+            <p class="email">rose@enterprise.com</p>
+            <button type="Contact">Contact</button>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <div class="container">
+            <h2>Zac Cassini</h2>
+            <p class="title">Sherpa</p>
+            <p1> Add text that describes person</p1>
+            <p class="email">zac@enterprise.com</p>
+            <button type="Contact">Contact</button>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <div class="container">
+            <h2>Amber Lindley</h2>
+            <p class="title">Sherpa</p>
+            <p1> Add text that describes person</p1>
+            <p class="email">amber@enterprise.com</p>
+            <button type="Contact">Contact</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-<div class="column">
-  <div class="card">
-    <div class="container">
-      <h2>Rose Holmes-Minton</h2>
-      <p class="title">Sherpa</p>
-      <p1> Add text that describes person</p1>
-      <p>rose@enterprise.com</p>
-      <button type="Contact">Contact</button>
-    </div>
-  </div>
-</div>
-<div class="column">
-  <div class="card">
-    <div class="container">
-      <h2>Zac Cassini</h2>
-      <p class="title">Sherpa</p>
-      <p1> Add text that describes person</p1>
-      <p>zac@enterprise.com</p>
-      <button type="Contact">Contact</button>
-    </div>
-  </div>
-</div>
-<div class="column">
-  <div class="card">
-    <div class="container">
-      <h2>Amber Lindley</h2>
-      <p class="title">Sherpa</p>
-      <p1> Add text that describes person</p1>
-      <p>amber@enterprise.com</p>
-      <button type="Contact">Contact</button>
-    </div>
-  </div>
-</div>
-</body>
+  </body>
 </html>
