--- a/src/main/resources/templates/contactUs.html
+++ b/src/main/resources/templates/contactUs.html
@@ -32,6 +32,7 @@ History
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="fullstyle.css" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,7 +66,7 @@ History
         <textarea rows="10" placeholder="Your inquiry"></textarea>
       </div>
     </div>
-    <button type="submit">SUBMIT</button>
+    <button class="contactUs__button" type="submit">SUBMIT</button>
   </form>
 </body>
 </html>
