--- a/src/main/resources/templates/styleContactUs.css
+++ b/src/main/resources/templates/styleContactUs.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap");
 
 * {
   box-sizing: border-box;
@@ -56,7 +56,7 @@ a {
   padding-top: 1rem;
 }
 
-button {
+.contactUs__button button {
   background-color: rgb(141, 224, 116);
   border: 1 rgb(26, 65, 26);
   font-size: 0.75rem;
@@ -67,7 +67,7 @@ button {
   text-decoration: none;
 }
 
-button:hover {
+.contactUs__button button:hover {
   background: rgb(248, 211, 179);
   border: 1px solid forestgreen;
   border-radius: 1rem;
@@ -86,4 +86,4 @@ button:hover {
     display: flex;
     flex-direction: column;
   }
-}
+} integrated to fullstyle.css */
