matching color scheme and working off of a single style sheet for about contact header and footer.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,6 @@
 <header>
+    <link rel="stylesheet" href="fullstyle.css" />
+
     <nav>
         <span class="twentyPix"><h1>JacKr Enterprises</h1></span>
       <ul>
