--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,7 @@
 
 <footer>
+  <link rel="stylesheet" href="fullstyle.css" />
+
   <p>
       <span class="footTwentyPix">
           JacKr Enterprises
