added attributes to the TrekView

--- a/src/main/resources/templates/trekView.html
+++ b/src/main/resources/templates/trekView.html
@@ -7,8 +7,9 @@
 <h1 th:text="${trek.name}"></h1>
 <body>
 <img th:src="${trek.image}">
-<h3 th:text="${trek.continent}"></h3>
-<h3 th:text="${trek.region}"></h3>
+<h2 th:text="${trek.continent}"></h2>
+<h2 th:text="${trek.region}"></h2>
+<h2 th:text="${trek.trekType}"></h2>
 <ul>
     <p><a href="/treks">Treks</a></p>
     <li th:text="${trek.name}"></li>
