--- a/src/main/resources/templates/trekView.html
+++ b/src/main/resources/templates/trekView.html
@@ -7,9 +7,9 @@
 <h1 th:text="${trek.name}"></h1>
 <body>
 <img th:src="${trek.image}">
-<h2 th:text="${trek.continent}"></h2>
-<h2 th:text="${trek.region}"></h2>
-<h2 th:text="${trek.trekType}"></h2>
+<h2 th:text="'Continent: ' + ${trek.continent.name}"></h2>
+<h2 th:text="'Region: ' + ${trek.region.name}"></h2>
+<h2 th:text="'Trek Type: ' + ${trek.trekType.name}"></h2>
 <ul>
     <p><a href="/treks">Treks</a></p>
     <li th:text="${trek.name}"></li>
