--- a/src/main/resources/templates/regionsView.html
+++ b/src/main/resources/templates/regionsView.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Region Views</title>
-</head>
-<body>
-<h1>Regions</h1>
-</body>
+<html lang="en" layout:decorate="~{layouts/layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    xmlns:th="http://www.thymeleaf.org">
+
+<main layout:fragment="content">
+    <h1>Regions</h1>
+</main>
 </html>
