--- a/src/main/resources/templates/trekTypesView.html
+++ b/src/main/resources/templates/trekTypesView.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trek Types View</title>
-</head>
-<body>
-<h1>Trek Types</h1>
-</body>
+<html lang="en" layout:decorate="~{layouts/layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    xmlns:th="http://www.thymeleaf.org">
+
+<main layout:fragment="content">
+    <h1>Trek Types</h1>
+</main>
+
 </html>
