--- a/src/main/resources/templates/404page.html
+++ b/src/main/resources/templates/404page.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+    <link rel="stylesheet" href="404pageStyle.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Oops! Page not found.</h2>
+      <h1>404</h1>
+      <p>We can't find the page you're looking for.</p>
+      <a href="#">Go back home</a>
+    </div>
+  </body>
 </html>
