adjusted fullstyle for updated header

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
-<header>
+<header class="header">
     <nav>
         <span class="twentyPix"><h1>JacKr Enterprises</h1></span>
-        <ul>
+        <ul class="header__nav_list">
             <li><a th:href=@{/treks}>Treks</a></li>
             <li><a th:href=@{/trekTypes}>Trek Types</a></li>
             <li><a th:href=@{/regions}>Regions</a></li>
