--- a/src/main/resources/static/fullstyle.css
+++ b/src/main/resources/static/fullstyle.css
@@ -17,12 +17,11 @@ h1 {
   color: blue;
   font-family: fantasy;
   font-size: 1.75em;
-  margin-top: 3rem;
-  padding-top: 3rem;
+  margin-top: 1.5rem;
 }
 
 nav {
-  background-color: rgb(97, 97, 97);
+  background-color: rgb(34, 10, 10);
   display: flex;
   flex-flow: row;
   justify-content: center;
@@ -42,13 +41,14 @@ a {
 }
 
 body{
+  padding-top: 1.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: 3rem;
 }
 
 button {
-  background-color: rgb(177, 175, 175);
+  background-color: rgb(34, 10, 10);
   border: 1px #eee;
   color: #fff;
   font-size: 0.75rem;
@@ -68,7 +68,7 @@ button:hover {
 
 footer {
   align-items: center;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(34, 10, 10);
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
   color: #fff;
@@ -84,11 +84,11 @@ footer {
 
 ul {
   list-style-type: none;
-  margin: 1rem;
+  margin: .5rem;
 }
 
 .about-section {
-  color: #222;
+  color: rgb(34, 10, 10);
   font-size: 0.75em;
   margin-top: 3rem;
   max-width: 60rem;
@@ -118,7 +118,7 @@ ul {
 }
 
 .contactUs__button button:hover {
-  background: rgb(119, 119, 119);
+  background: rgb(34, 10, 10);
   border: 1px solid forestgreen;
   border-radius: 1rem;
   box-shadow: -4px, 6px 5px 0px (75, 1, 65, 0.75);
@@ -126,7 +126,7 @@ ul {
 }
 
 .container {
-  background-color: rgba(10, 15, 9, 0.623);
+  background-color: rgb(34, 10, 10);
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
   border-top-left-radius: 0.25em;
@@ -149,7 +149,7 @@ ul {
 }
 
 .employees {
-    background-color: rgba(10, 15, 9, 0.623);
+    background-color: rgba(34, 10, 10, 0.623);
     border-radius: 0.25rem;
     display: grid;
     grid-column-gap: 2em;
@@ -172,18 +172,24 @@ ul {
   
 .header {
   align-items: center;
+  background-color: rgb(34, 10, 10);
   display: flex;
   justify-content: space-between;
-  padding: 1.618em;
 }
 
 .header__nav_list {
+  background-color: rgb(34, 10, 10);
   display: flex;
-  font-size: 1rem;
+  font-size: .75rem;
+  margin-bottom: 6rem;
+  margin-top: 1.618rem;
+  padding-left: 0.15rem;
+  padding-right: 0.15rem;
+  text-decoration: none;
 }
 
 .header__nav_list li:hover {
-  background-color: rgb(100, 100, 100);
+  background-color: #222;
   border: 1px solid rgba(32, 245, 3, 0.767);
   border-radius: 1rem;
   transition: 0.5s;
