region view and views done

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,20 +14,20 @@
   </header>
   <body>
     <div class="rotate">
-      <span style="--i: 1"><img src="/team-1-trek/src/main/resources/static/images/hiking-map.jpg" /></span>
+      <span style="--i: 1"><img src="/images/hiking-map.jpg" /></span>
       <span style="--i: 2"
-        ><img src="/team-1-trek/src/main/resources/static/images/RockyMountains.jpg"
+        ><img src="/images/RockyMountains.jpg"
       /></span>
-      <span style="--i: 3"><img src="/team-1-trek/src/main/resources/static/images/Alps.jpg" /></span>
-      <span style="--i: 4"><img src="/team-1-trek/src/main/resources/static/images/Himalayas.jpg" /></span>
-      <span style="--i: 5"><img src="/team-1-trek/src/main/resources/static/images/Andes.jpg" /></span>
+      <span style="--i: 3"><img src="/images/Alps.jpg" /></span>
+      <span style="--i: 4"><img src="/images/Himalayas.jpg" /></span>
+      <span style="--i: 5"><img src="/images/Andes.jpg" /></span>
       <span style="--i: 6"
-        ><img src="/team-1-trek/src/main/resources/static/images/MountKilimanjaro.jpg"
+        ><img src="/images/MountKilimanjaro.jpg"
       /></span>
       <span style="--i: 7"
-        ><img src="/team-1-trek/src/main/resources/static/images/GreatDividingRange.jpg"
+        ><img src="/images/GreatDividingRange.jpg"
       /></span>
-      <span style="--i: 8"><img src="/team-1-trek/src/main/resources/static/images/MtTennant.jpg" /></span>
+      <span style="--i: 8"><img src="/images/MtTennant.jpg" /></span>
     </div>
   </body>
 </html>
