--- a/src/main/resources/templates/continentsView.html
+++ b/src/main/resources/templates/continentsView.html
@@ -2,7 +2,7 @@
 <html lang="en" layout:decorate="~{layouts/layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     xmlns:th="http://www.thymeleaf.org">
 
-<main layout:fragment="contents">
+<main layout:fragment="content">
     <h1>Continents</h1>
     <h2 th:each="continent:${continents}"><a th:href="@{'/continents/' + ${continent.name}}" th:text="${continent.name}">Name</a></h2>
 
