--- a/src/main/resources/templates/trekTypesView.html
+++ b/src/main/resources/templates/trekTypesView.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
+<html lang="en" layout:decorate="~{layouts/layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org">
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-    <meta charset="UTF-8">
-    <title>TrekTypes View</title>
-</head>
-<body>
+<main layout:fragment="content">
+
 <h1>We Offer the Following Types of Treks</h1>
 <h2 th:each="trekType:${trekTypes}">  <a th:href="@{'/trekTypes/' + ${trekType.name}}" th:text ="${trekType.name}"></a></h2>
 
 
-</body>
+</main>
 </html>
