--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
     <h2>Never Stop Trekking the World!</h2>
   </header>
   <body>
+  <a href="/treks">
     <div class="rotate">
       <span style="--i: 1"><img src="/images/hiking-map.jpg" /></span>
       <span style="--i: 2"
@@ -29,5 +30,6 @@
       /></span>
       <span style="--i: 8"><img src="/images/MtTennant.jpg" /></span>
     </div>
+  </a>
   </body>
 </html>
